# labwhere

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: documentation.yml  rust.yml
src/: lib.rs  location_type.rs  main.rs
src/db/: create_db.rs  mod.rs  savable.rs  schema.sql
src/errors/: mod.rs
src/models/: labware.rs  location.rs  location_type.rs  mod.rs
src/services/: mod.rs  scan.rs
