[package]
name = "labwhere"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.0"
once_cell = "1.10.0"
tokio = { version = "1.41.0", features = ["full"] }
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "sqlite", "macros" ] }
hyper = "1.5.1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
